--- a/src/pages/feed/feed.html
+++ b/src/pages/feed/feed.html
@@ -9,6 +9,9 @@
 <ion-content>
   <ion-list>
     <ion-item *ngFor="let post of posts">
+    <ion-thumbnail item-left>
+      <img src="assets/images/{{ post.img }}.JPG">
+    </ion-thumbnail>
       <h2>{{ post.title }}</h2>
       <p>{{ post.description }}</p>
     </ion-item>
