--- a/src/pages/feed/feed.html
+++ b/src/pages/feed/feed.html
@@ -8,12 +8,12 @@
 
 <ion-content>
   <ion-list>
-    <ion-item *ngFor="let post of posts">
-    <ion-thumbnail item-left>
-      <img [src]="post.imgSrc">
-    </ion-thumbnail>
+    <button ion-item *ngFor="let post of posts" (click)="postSelected(post)">
+      <ion-thumbnail item-left>
+        <img [src]="post.imgSrc">
+      </ion-thumbnail>
       <h2>{{ post.title }}</h2>
       <p>{{ post.description }}</p>
-    </ion-item>
+    </button>
   </ion-list>
 </ion-content>
