--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,9 @@
   <!-- cordova.js required for cordova apps -->
   <script src="cordova.js"></script>
 
+  <!-- Parse doesn't work with rollup etc right now -->
+  <script src="assets/scripts/parse.min.js"></script>
+
   <!-- The polyfills js is generated during the build process -->
   <script src="build/polyfills.js"></script>
 
