--- a/src/pages/feed/feed.html
+++ b/src/pages/feed/feed.html
@@ -8,9 +8,9 @@
 
 <ion-content>
   <ion-list>
-    <button ion-item *ngFor="let post of posts" (click)="postSelected(post)">
+    <button ion-item *ngFor="let post of posts; let i = index; trackBy:trackByPost" (click)="postSelected(post)">
       <ion-thumbnail item-left>
-        <img [src]="post.imgSrc">
+        <img [src]="post.picture.url">
       </ion-thumbnail>
       <h2>{{ post.title }}</h2>
       <p>{{ post.description }}</p>
