--- a/src/pages/feed/feed.html
+++ b/src/pages/feed/feed.html
@@ -7,6 +7,7 @@
 </ion-header>
 
 <ion-content>
+
   <ion-list>
     <button ion-item *ngFor="let post of posts; let i = index; trackBy:trackByPost" (click)="postSelected(post)">
       <ion-thumbnail item-left>
@@ -16,4 +17,9 @@
       <p>{{ post.description }}</p>
     </button>
   </ion-list>
+
+  <ion-infinite-scroll *ngIf="hasMorePosts" (ionInfinite)="loadNextPosts($event)">
+   <ion-infinite-scroll-content></ion-infinite-scroll-content>
+ </ion-infinite-scroll>
+
 </ion-content>
