--- a/src/pages/feed/feed.html
+++ b/src/pages/feed/feed.html
@@ -1,8 +1,11 @@
 <ion-header>
   <ion-navbar color="primary">
-    <ion-title>
-      Climatic
-    </ion-title>
+    <ion-title>Climatic</ion-title>
+    <ion-buttons end>
+      <button ion-button icon-only (click)="openAddPostModal()">
+        <ion-icon name="add"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 </ion-header>
 
