--- a/src/pages/add-post/add-post.html
+++ b/src/pages/add-post/add-post.html
@@ -17,7 +17,7 @@
     </ion-item>
     <ion-item>
       <ion-label floating>Description</ion-label>
-      <ion-textarea elastic [(ngModel)]="model.description" name="description"></ion-textarea>
+      <ion-textarea fz-elastic [(ngModel)]="model.description" name="description"></ion-textarea>
     </ion-item>
     <div padding>
       <button type="submit" block ion-button icon-left>
